--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,14 @@
     <head>
         <h1>Welcome to my web page!</h1>
         <title>Hello!</title>
+        <style>
+            h1{
+                color:blue
+            }
+        </style>
     </head>
     <body>
-        <h2 style="color:blue;" >Hello!!</h2>
+        <h2>Hello!!</h2>
         Hello world!
     </body>
 
